show/service-external-load-balancer.yaml
# Create an External Load Balancer
apiVersion: v1
kind: Service
metadata:
  name: show-service-external-load-balancer
spec:
  selector:
    app: show
  ports:
    - port: 10001
      targetPort: 8080  
  type: LoadBalancer
